remove quantity
